test/scripted/compilation2/errors/type_mismatch.bnj
# test:subtest
# test:error 6:18 "type mismatch (expected 'i32', got 'f32')"

func main() {
    var a = 0.5;
    var b: i32 = a;
}

# test:subtest
# test:error 14:9 "type mismatch (expected 'i32', got 'bool')"

func main() {
    var a = 5;
    a = false;
}

# test:subtest
# test:error 20:16 "type mismatch (expected 'i32', got 'bool')"

const A: i32 = false;

# test:subtest
# test:error 26:12 "type mismatch (expected 'f32', got 'bool')" 

func get() -> f32 {
    return true;
}

# test:subtest
# test:error 38:16 "type mismatch (expected 'f32', got 'bool')"

struct Object {
    var value: f32;
}

func main() {
    var object = Object {
        value: true,
    };
}
